--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,19 @@
-Package: rapRegTemplate
+Package: Deformitet
 Type: Package
-Title: Template to be used for Making New Registries at Rapportekt
+Title: Ryggkirurgi - Deformitet på Rapporteket
 Version: 1.2.0
 Authors@R: c(
-    person(given = "Are",
-           family = "Edvardsen",
+    person(given = "Ingrid",
+           family = "Bondevik",
            role = c("aut", "cre"),
-           email = "biorakel@gmail.com",
-           comment = c(ORCID = "0000-0002-5210-3656")))
-Maintainer: Are Edvardsen <biorakel@gmail.com>
-Description: Boilerplate R code for making result services for registries at
-  Rapporteket. May be used as templalte for establishin such services or as
-  plain exercise for training purposes.
+           email = "ingrid.bondevik@helse-nord.no",
+           comment = c(ORCID = "0000-0002-8564-255X")),
+    person(given = "Stein-Kato",
+           family = "Lindberg",
+           role = c("aut", "cre"),
+           email = "stein-kato.lindberg@helse-nord.no",
+           comment = c(ORCID = "0000-0001-6088-255X")))
+Description: Applikasjon for Ryggkirurgiregisteret - Deformitet
 Depends:
   R (>= 3.5.0)
 Imports:
@@ -19,14 +21,16 @@ Imports:
   magrittr,
   rapbase,
   shiny,
-  shinyalert
+  shinyalert,
+  ggplot,
+  dplyr
 Remotes:
   Rapporteket/rapbase
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-URL: http://github.com/Rapporteket/rapRegTemplate
-BugReports: http://github.com/Rapporteket/rapRegTemplate/issues
+URL: http://github.com/Rapporteket/Deformitet
+BugReports: http://github.com/Rapporteket/Deformitet/issues
 Suggests: 
     testthat
