--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,11 @@ services:
       - 8.8.8.8
     restart: "no"
     environment:
-      PASSWORD: password
+      DISABLE_AUTH: "true"
       DB_HOST: db
       DB_USER: root
       DB_PASS: root
+    platform: linux/amd64
 
   adminer:
     depends_on:
