--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   dev:
     depends_on:
       - db
-    image: rapporteket/deformitet-dev:main
+    image: rapporteket/deformitet-dev:weekly
     volumes:
       - ~/.ssh:/home/rstudio/.ssh
       - ~/.gitconfig:/home/rstudio/.gitconfig
@@ -24,7 +24,7 @@ services:
       - 8.8.8.8
     restart: "no"
     environment:
-      PASSWORD: password
+      DISABLE_AUTH: "true"
       DB_HOST: db
       DB_USER: root
       DB_PASS: root
