making ggplot-based plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(app_ui)
 export(deformitetHentTabell)
 export(getFakeRegData)
 export(getRegData)
+export(les_og_flate_ut)
 export(makeHist)
 export(run_app)
 importFrom(magrittr,"%>%")
