--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(getRegData)
 export(gg_makeHist)
 export(les_og_flate_ut)
 export(makeHist)
+export(make_table)
 export(run_app)
 importFrom(magrittr,"%>%")
