--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,12 @@ export("%>%")
 export(app_server)
 export(app_ui)
 export(deformitetHentTabell)
-export(getFakeRegData)
 export(getRegData)
-export(gg_makeHist)
+export(kompl_data)
 export(les_og_flate_ut)
-export(makeHist)
-export(make_table)
+export(makePlot_gg)
+export(makeTable)
+export(pre_pros)
+export(prepVar)
 export(run_app)
 importFrom(magrittr,"%>%")
