--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,10 @@ Imports:
   dplyr,
   rlang,
   tidyr,
-  usethis
+  usethis,
+  dplyr,
+  shinyjs,
+  bslib
 Remotes:
   Rapporteket/rapbase
 License: GPL-3
