made version 1.2.0 ready for QA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,15 @@
 export("%>%")
 export(app_server)
 export(app_ui)
+export(clean_datadump)
 export(deformitetHentTabell)
 export(getRegData)
+export(hallo)
 export(kompl_data)
 export(les_og_flate_ut)
 export(makePlot_gg)
 export(makeTable)
-export(module_datadump_UI)
-export(module_datadump_server)
 export(pre_pros)
 export(prepVar)
 export(run_app)
-export(startside_UI)
 importFrom(magrittr,"%>%")
