--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(kompl_data)
 export(les_og_flate_ut)
 export(makePlot_gg)
 export(makeTable)
+export(module_datadump_UI)
+export(module_datadump_server)
 export(pre_pros)
 export(prepVar)
 export(run_app)
