--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,12 @@ export(app_server)
 export(app_ui)
 export(clean_datadump)
 export(deformitetHentTabell)
-export(getRegData)
 export(kompl_data)
 export(les_og_flate_ut)
 export(makePlot_gg)
 export(makeTable)
+export(module_datadump_UI)
+export(module_datadump_server)
 export(pre_pros)
 export(prepVar)
 export(run_app)
