--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(app_server)
 export(app_ui)
 export(clean_datadump)
 export(deformitetHentTabell)
+export(explanation_kvalind)
 export(kompl_data)
 export(kval_count)
 export(kval_plot)
