Foerste commit sammenligningsmodul

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export("%>%")
 export(app_server)
 export(app_ui)
+export(check_small_sample)
 export(clean_datadump)
+export(comparison_module_server)
+export(comparison_plot)
 export(deformitetHentTabell)
 export(explanation_kvalind)
 export(kompl_data)
@@ -12,10 +15,12 @@ export(kval_plot)
 export(les_og_flate_ut)
 export(makePlot_gg)
 export(makeTable)
+export(make_labels)
 export(module_datadump_UI)
 export(module_datadump_server)
 export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
+export(module_sammenligning_UI)
 export(pre_pros)
 export(prepVar)
 export(run_app)
