--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(app_server)
 export(app_ui)
 export(check_small_sample)
 export(clean_datadump)
-export(comparison_module_server)
-export(comparison_plot)
+export(comparison_plot_continuous)
+export(comparison_plot_discrete)
 export(deformitetHentTabell)
 export(explanation_kvalind)
 export(kompl_data)
@@ -21,7 +21,9 @@ export(module_datadump_server)
 export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
 export(module_sammenligning_UI)
+export(module_sammenligning_server)
 export(pre_pros)
 export(prepVar)
 export(run_app)
+export(utvalg_basic)
 importFrom(magrittr,"%>%")
