Fikset modul sammenligning - klar til test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,5 +25,7 @@ export(module_sammenligning_server)
 export(pre_pros)
 export(prepVar)
 export(run_app)
+export(tabell_sam)
+export(tabell_sam_discrete)
 export(utvalg_basic)
 importFrom(magrittr,"%>%")
