Tatt bort alt med spc i denne greina

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,8 +29,7 @@ Imports:
   usethis,
   dplyr,
   bslib,
-  shinyWidgets,
-  NHSRplotthedots
+  shinyWidgets
 Remotes:
   Rapporteket/rapbase
 License: GPL-3
