--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,15 +16,21 @@ export(les_og_flate_ut)
 export(makePlot_gg)
 export(makeTable)
 export(make_labels)
+export(mergeRegData)
 export(module_datadump_UI)
 export(module_datadump_server)
 export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
 export(module_sammenligning_UI)
 export(module_sammenligning_server)
+export(module_spc_UI)
+export(module_spc_server)
 export(pre_pros)
 export(prepVar)
+export(prepros_SPC)
 export(run_app)
+export(spc_function)
+export(spc_text)
 export(tabell_sam)
 export(tabell_sam_discrete)
 export(utvalg_basic)
