--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: mysql:8
     command: --innodb-log-file-size=500M --innodb_strict_mode=0
     restart: "no"
-    volumes:
-    - ~/softlinks/mysql_db:/var/lib/mysql
+    #volumes:
+    #- ~/softlinks/mysql_db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
 
@@ -16,7 +16,7 @@ services:
       - ~/.ssh:/home/rstudio/.ssh
       - ~/.gitconfig:/home/rstudio/.gitconfig
       - .:/home/rstudio/deformitet
-      - ~/softlinks/mydata:/home/rstudio/mydata
+     # - ~/softlinks/mydata:/home/rstudio/mydata
     ports:
       - "8787:8787"
       - "3838:3838"
