--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,47 @@
+x-environment: &environment
+  MYSQL_DB_LOG: db_log # log in
+  MYSQL_DB_AUTOREPORT: db_autoreport # liste over månedsrapport
+  MYSQL_DB_DATA: NoRGastReportDataStaging # databasenavnet det finner vi i adminer
+  MYSQL_DB_DATA: db
+  MYSQL_HOST: db
+  MYSQL_USER: root
+  MYSQL_PASSWORD: root
+  FALK_APP_ID: # finn egen id
+  USERORGID: "pilot" # vi tror det vil samsvare med pakkenavnet
+  SHINYPROXY_USERNAME: test@tester.no
+  SHINYPROXY_USERGROUPS: "pilot"
+  FALK_USER_EMAIL: ingrid.bondevik@helse-nord.no
+
+
 services:
   db:
     image: mysql:8
-    command: --innodb-log-file-size=500M --innodb_strict_mode=0
     restart: "no"
-    volumes:
-    - ~/softlinks/mysql_db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+    -.dev/db:docker-entrypoint-initdb.d # USIKKER PÅ DENNE
+    - ~/softlinks/mysql_db:/var/lib/mysql
+    entrypoint: #???
+    ports: #???
+
+
+  app:
+    depends_on:
+      - db
+    image: rapporteket/deformitet-dev:main # image navn
+    ports:
+      - 3838:3838
+    volumes:
+      - ./data-raw/config:/app/R
+    environment:
+      R_RAP_CONFIG_PATH: /app/R
+      FALK_EXTENDED_USER_RIGHTS: "[{\"A\":81,\"R\":\"LU\",\"U\":601225},{\"A\":81,\"R\":\"SC\",\"U\":601225},{\"A\":81,\"R\":\"SC\",\"U\":700922},{\"A\":81,\"R\":\"LU\",\"U\":700922}]" # erstatte disse resh-ene med noen som faktisk eksisterer i dataene
+      R_RAP_INSTANCE: "QAC"
+      << : *environment
+
 
   dev:
     depends_on:
@@ -17,17 +52,17 @@ services:
       - ~/.gitconfig:/home/rstudio/.gitconfig
       - .:/home/rstudio/deformitet
       - ~/softlinks/mydata:/home/rstudio/mydata
+      -../rapbase/.:/home/rstudio/rapbase ##??? 
     ports:
       - "8787:8787"
-      - "3838:3838"
     dns:
-      - 8.8.8.8
+      - 8.8.8.8 ## ?? 
     restart: "no"
     environment:
+      << : *environment
       DISABLE_AUTH: "true"
-      DB_HOST: db
-      DB_USER: root
-      DB_PASS: root
+      R_RAP_CONFIG_PATH: /home/rstudio/norgast/data-raw/config
+      FALK_EXTENDED_USER_RIGHTS: "[{\\\"A\\\":81,\\\"R\\\":\\\"LU\\\",\\\"U\\\":601225},{\\\"A\\\":81,\\\"R\\\":\\\"SC\\\",\\\"U\\\":601225},{\\\"A\\\":81,\\\"R\\\":\\\"SC\\\",\\\"U\\\":700922},{\\\"A\\\":81,\\\"R\\\":\\\"LU\\\",\\\"U\\\":700922}]" # du må ha tre backslashes i dev og en i app
     platform: linux/amd64
 
   adminer:
