--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 x-environment: &environment
   MYSQL_DB_LOG: db_log # log in
-  MYSQL_DB_AUTOREPORT: db_autoreport # liste over månedsrapport
-  MYSQL_DB_DATA: NoRGastReportDataStaging # databasenavnet det finner vi i adminer
-  MYSQL_DB_DATA: db
+  MYSQL_DB_AUTOREPORT: db_autoreport
+  MYSQL_DB_DATA: RapporteketDeformitet # databasenavnet det finner vi i adminer
   MYSQL_HOST: db
   MYSQL_USER: root
   MYSQL_PASSWORD: root
@@ -22,16 +21,14 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
-    -.dev/db:docker-entrypoint-initdb.d # USIKKER PÅ DENNE
+    - ./inst/db:docker-entrypoint-initdb.d
     - ~/softlinks/mysql_db:/var/lib/mysql
-    entrypoint: #??? Denne kan jeg kopiere fra NorGast 
-    ports: #??? # Denne trenger jeg ikke 
-
+    entrypoint: sh -c "/usr/local/bin/docker-entrypoint.sh  --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
 
   app:
     depends_on:
       - db
-    image: rapporteket/deformitet-dev:main # image navn
+    image: rapporteket/deformitet # image navn
     ports:
       - 3838:3838
     volumes:
@@ -41,6 +38,7 @@ services:
       FALK_EXTENDED_USER_RIGHTS: "[{\"A\":81,\"R\":\"LU\",\"U\":601225},{\"A\":81,\"R\":\"SC\",\"U\":601225},{\"A\":81,\"R\":\"SC\",\"U\":700922},{\"A\":81,\"R\":\"LU\",\"U\":700922}]" # erstatte disse resh-ene med noen som faktisk eksisterer i dataene
       R_RAP_INSTANCE: "QAC"
       << : *environment
+    platform: linux/amd64
 
 
   dev:
@@ -52,11 +50,8 @@ services:
       - ~/.gitconfig:/home/rstudio/.gitconfig
       - .:/home/rstudio/deformitet
       - ~/softlinks/mydata:/home/rstudio/mydata
-      -../rapbase/.:/home/rstudio/rapbase ##??? 
     ports:
       - "8787:8787"
-    dns:
-      - 8.8.8.8 ## ?? 
     restart: "no"
     environment:
       << : *environment
