--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 x-environment: &environment
   MYSQL_DB_LOG: db_log # log in
-  MYSQL_DB_AUTOREPORT: db_autoreport
-  MYSQL_DB_DATA: DeformitetRapporteket # databasenavnet det finner vi i adminer
+  MYSQL_DB_AUTOREPORT: db_autoreport # autoreport
+  MYSQL_DB_DATA: DeformitetRapporteket # databasenavnet - det finner vi i adminer
   MYSQL_HOST: db
   MYSQL_USER: root
   MYSQL_PASSWORD: root
-  FALK_APP_ID: # finn egen id
+  FALK_APP_ID: 14 # velg id (tall). NHN vil generere ny id seinere
   USERORGID: "pilot" # vi tror det vil samsvare med pakkenavnet
   SHINYPROXY_USERNAME: test@tester.no
   SHINYPROXY_USERGROUPS: "pilot"
@@ -21,7 +21,7 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
-    - ./inst/db:docker-entrypoint-initdb.d
+    #- ./inst/db:docker-entrypoint-initdb.d
     - ~/softlinks/mysql_db:/var/lib/mysql
     entrypoint: sh -c "/usr/local/bin/docker-entrypoint.sh  --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
 
@@ -35,10 +35,10 @@ services:
       - ./data-raw/config:/app/R
     environment:
       R_RAP_CONFIG_PATH: /app/R
-      FALK_EXTENDED_USER_RIGHTS: "[{\"A\":81,\"R\":\"LU\",\"U\":601225},{\"A\":81,\"R\":\"SC\",\"U\":601225},{\"A\":81,\"R\":\"SC\",\"U\":700922},{\"A\":81,\"R\":\"LU\",\"U\":700922}]" # erstatte disse resh-ene med noen som faktisk eksisterer i dataene
+      FALK_EXTENDED_USER_RIGHTS: "[{\"A\":14,\"R\":\"LU\",\"U\":601225},{\"A\":14,\"R\":\"SC\",\"U\":601225},{\"A\":14,\"R\":\"SC\",\"U\":700922},{\"A\":14,\"R\":\"LU\",\"U\":700922}]" # erstatte disse resh-ene med noen som faktisk eksisterer i dataene
       R_RAP_INSTANCE: "QAC"
       << : *environment
-    platform: linux/amd64
+    platform: linux/amd64 # kun nødvendig å ha med 
 
 
   dev:
@@ -57,7 +57,7 @@ services:
       << : *environment
       DISABLE_AUTH: "true"
       R_RAP_CONFIG_PATH: /home/rstudio/norgast/data-raw/config
-      FALK_EXTENDED_USER_RIGHTS: "[{\\\"A\\\":81,\\\"R\\\":\\\"LU\\\",\\\"U\\\":601225},{\\\"A\\\":81,\\\"R\\\":\\\"SC\\\",\\\"U\\\":601225},{\\\"A\\\":81,\\\"R\\\":\\\"SC\\\",\\\"U\\\":700922},{\\\"A\\\":81,\\\"R\\\":\\\"LU\\\",\\\"U\\\":700922}]" # du må ha tre backslashes i dev og en i app
+      FALK_EXTENDED_USER_RIGHTS: "[{\\\"A\\\":14,\\\"R\\\":\\\"LU\\\",\\\"U\\\":601225},{\\\"A\\\":14,\\\"R\\\":\\\"SC\\\",\\\"U\\\":601225},{\\\"A\\\":14,\\\"R\\\":\\\"SC\\\",\\\"U\\\":700922},{\\\"A\\\":14,\\\"R\\\":\\\"LU\\\",\\\"U\\\":700922}]" # du må ha tre backslashes i dev og en i app
     platform: linux/amd64
 
   adminer:
