--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - db
     image: ingridtesternhn # image navn
     ports:
-      - 3838:3838
+      - 3838:3838 # port for å se appen
     volumes:
       - ./data-raw/config:/app/R
     environment:
@@ -58,7 +58,7 @@ services:
       DISABLE_AUTH: "true"
       R_RAP_CONFIG_PATH: /home/rstudio/norgast/data-raw/config
       FALK_EXTENDED_USER_RIGHTS: "[{\\\"A\\\":14,\\\"R\\\":\\\"LU\\\",\\\"U\\\":601225},{\\\"A\\\":14,\\\"R\\\":\\\"SC\\\",\\\"U\\\":601225},{\\\"A\\\":14,\\\"R\\\":\\\"SC\\\",\\\"U\\\":700922},{\\\"A\\\":14,\\\"R\\\":\\\"LU\\\",\\\"U\\\":700922}]" # du må ha tre backslashes i dev og en i app
-    platform: linux/amd64
+    platform: linux/amd64 # kun nødvendig for mac-brukere
 
   adminer:
     depends_on:
