fikset ui-delen av ny modul

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(make_labels)
 export(mergeRegData)
 export(module_datadump_UI)
 export(module_datadump_server)
+export(module_fordeling_UI)
 export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
 export(module_sammenligning_UI)
