fikset server-delen av fordelingsfigmodulen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(mergeRegData)
 export(module_datadump_UI)
 export(module_datadump_server)
 export(module_fordeling_UI)
+export(module_fordeling_server)
 export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
 export(module_sammenligning_UI)
