Fikset alt med komplikasjonstyper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(comparison_plot_discrete)
 export(deformitetHentTabell)
 export(explanation_kvalind)
 export(kompl_data)
+export(kompl_plot)
+export(kompl_tbl)
 export(kval_count)
 export(kval_plot)
 export(les_og_flate_ut)
