basic struktur server og ui

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ export(module_fordeling_UI)
 export(module_fordeling_server)
 export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
+export(module_registreringer_UI)
+export(module_registreringer_server)
 export(module_sammenligning_UI)
 export(module_sammenligning_server)
 export(module_spc_UI)
