laget modul for registreringsoversikter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,5 +43,7 @@ export(spc_function)
 export(spc_text)
 export(tabell_sam)
 export(tabell_sam_discrete)
+export(tbl_reg)
+export(tbl_skjema_reg)
 export(utvalg_basic)
 importFrom(magrittr,"%>%")
