--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ export(module_fordeling_UI)
 export(module_fordeling_server)
 export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
+export(module_registreringer_UI)
+export(module_registreringer_server)
 export(module_sammenligning_UI)
 export(module_sammenligning_server)
 export(module_spc_UI)
@@ -41,5 +43,7 @@ export(spc_function)
 export(spc_text)
 export(tabell_sam)
 export(tabell_sam_discrete)
+export(tbl_reg)
+export(tbl_skjema_reg)
 export(utvalg_basic)
 importFrom(magrittr,"%>%")
