div fiks - bla endret kvalitetsindikatorvisning og div nedlasting (#49)
Fikset div etter møte med registerleder
-ny telling av kvalitetsindikator for komplikasjoner
-ny visning av registreringer
-ny visning av kvalitetsindikatorfigur
-ny visning for sammenligningsfigur
-endring av feil måleverdier for kvalitetsindikator
osv.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(module_sammenligning_UI)
 export(module_sammenligning_server)
 export(module_spc_UI)
 export(module_spc_server)
+export(ny_komplikasjon3mnd_usmerte)
 export(pre_pros)
 export(prepVar)
 export(prep_var_na)
