--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(module_datadump_UI)
 export(module_datadump_server)
 export(module_fordeling_UI)
 export(module_fordeling_server)
+export(module_gjennomsnitt_UI)
+export(module_gjennomsnitt_server)
 export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
 export(module_registreringer_UI)
@@ -35,6 +37,7 @@ export(module_sammenligning_server)
 export(module_spc_UI)
 export(module_spc_server)
 export(ny_komplikasjon3mnd_usmerte)
+export(over_tid_plot)
 export(pre_pros)
 export(prepVar)
 export(prep_var_na)
@@ -44,7 +47,9 @@ export(spc_function)
 export(spc_text)
 export(tabell_sam)
 export(tabell_sam_discrete)
+export(table_freq_time)
 export(tbl_reg)
 export(tbl_skjema_reg)
 export(utvalg_basic)
+export(y_limits_gjen)
 importFrom(magrittr,"%>%")
