--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(check_small_sample)
 export(clean_datadump)
 export(comparison_plot_continuous)
 export(comparison_plot_discrete)
+export(count_kvalind)
 export(deformitetHentTabell)
 export(explanation_kvalind)
 export(kompl_data)
