--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Imports:
   shinyWidgets,
   tidyr,
   usethis,
+  lubridate,
   kableExtra,
   knitr
 Remotes:
@@ -41,3 +42,4 @@ URL: http://github.com/Rapporteket/deformitet
 BugReports: http://github.com/Rapporteket/deformitet/issues
 Suggests: 
     testthat
+LazyData: true
