--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,12 @@ export(check_small_sample)
 export(clean_datadump)
 export(comparison_plot_continuous)
 export(comparison_plot_discrete)
+export(count_kvalind)
 export(deformitetHentTabell)
 export(explanation_kvalind)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
-export(kval_count)
 export(kval_plot)
 export(les_og_flate_ut)
 export(makePlot_gg)
