Lagt inn funksjonalitet for boxplot og endret density-visningen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,16 @@ export(.data)
 export(add_freq_var_to_dataframe)
 export(app_server)
 export(app_ui)
-export(check_small_sample)
+export(clean_comparability_table)
 export(clean_datadump)
-export(comparison_plot_continuous)
-export(comparison_plot_discrete)
 export(count_kvalind)
 export(deformitetHentTabell)
+export(density_plot_comparability)
 export(explanation_kvalind)
+export(find_comp_variables)
+export(find_variables)
+export(gg_data_comparability)
+export(ggplot_comparability)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
@@ -19,8 +22,8 @@ export(kval_plot)
 export(les_og_flate_ut)
 export(makePlot_gg)
 export(makeTable)
+export(make_comparability_table)
 export(make_freq_table)
-export(make_labels)
 export(mapping_old_name_new_name)
 export(mergeRegData)
 export(module_datadump_UI)
@@ -37,6 +40,7 @@ export(module_sammenligning_UI)
 export(module_sammenligning_server)
 export(module_spc_UI)
 export(module_spc_server)
+export(new_labels)
 export(ny_komplikasjon3mnd_usmerte)
 export(over_tid_plot)
 export(pre_pros)
@@ -46,8 +50,6 @@ export(prepros_SPC)
 export(run_app)
 export(spc_function)
 export(spc_text)
-export(tabell_sam)
-export(tabell_sam_discrete)
 export(table_freq_time)
 export(tbl_reg)
 export(tbl_skjema_reg)
