Dokumentasjon og oversatt til norsk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,24 +5,23 @@ export(.data)
 export(add_freq_var_to_dataframe)
 export(app_server)
 export(app_ui)
-export(clean_comparability_table)
+export(boxplot_sam)
 export(clean_datadump)
 export(count_kvalind)
 export(deformitetHentTabell)
-export(density_plot_comparability)
+export(density_sam)
 export(explanation_kvalind)
-export(find_comp_variables)
-export(find_variables)
-export(gg_data_comparability)
-export(ggplot_comparability)
+export(finn_sam_variabler)
+export(finn_variabler)
+export(ggdata_sam_plot)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
 export(kval_plot)
+export(lag_sam_tabell)
 export(les_og_flate_ut)
 export(makePlot_gg)
 export(makeTable)
-export(make_comparability_table)
 export(make_freq_table)
 export(mapping_old_name_new_name)
 export(mergeRegData)
@@ -40,8 +39,8 @@ export(module_sammenligning_UI)
 export(module_sammenligning_server)
 export(module_spc_UI)
 export(module_spc_server)
-export(new_labels)
 export(ny_komplikasjon3mnd_usmerte)
+export(nye_navn)
 export(over_tid_plot)
 export(pre_pros)
 export(prepVar)
@@ -54,6 +53,7 @@ export(table_freq_time)
 export(tbl_reg)
 export(tbl_skjema_reg)
 export(utvalg_basic)
+export(vask_sam_tabell)
 export(y_limits_gjen)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
