--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(count_kvalind)
 export(deformitetHentTabell)
 export(density_sam)
 export(explanation_kvalind)
+export(finn_sam_konfidensint)
 export(finn_sam_variabler)
 export(finn_variabler)
 export(ggdata_sam_plot)
