--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,22 +5,25 @@ export(.data)
 export(add_freq_var_to_dataframe)
 export(app_server)
 export(app_ui)
-export(check_small_sample)
+export(boxplot_sam)
 export(clean_datadump)
-export(comparison_plot_continuous)
-export(comparison_plot_discrete)
 export(count_kvalind)
 export(deformitetHentTabell)
+export(density_sam)
 export(explanation_kvalind)
+export(finn_sam_konfidensint)
+export(finn_sam_variabler)
+export(finn_variabler)
+export(ggdata_sam_plot)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
 export(kval_plot)
+export(lag_sam_tabell)
 export(les_og_flate_ut)
 export(makePlot_gg)
 export(makeTable)
 export(make_freq_table)
-export(make_labels)
 export(mapping_old_name_new_name)
 export(mergeRegData)
 export(module_datadump_UI)
@@ -38,6 +41,7 @@ export(module_sammenligning_server)
 export(module_spc_UI)
 export(module_spc_server)
 export(ny_komplikasjon3mnd_usmerte)
+export(nye_navn)
 export(over_tid_plot)
 export(pre_pros)
 export(prepVar)
@@ -46,12 +50,11 @@ export(prepros_SPC)
 export(run_app)
 export(spc_function)
 export(spc_text)
-export(tabell_sam)
-export(tabell_sam_discrete)
 export(table_freq_time)
 export(tbl_reg)
 export(tbl_skjema_reg)
 export(utvalg_basic)
+export(vask_sam_tabell)
 export(y_limits_gjen)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
