--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,9 +38,10 @@ Remotes:
   Rapporteket/rapbase
 License: GPL-3
 Encoding: UTF-8
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 URL: http://github.com/Rapporteket/deformitet
 BugReports: http://github.com/Rapporteket/deformitet/issues
 Suggests: 
-    testthat
+    testthat (>= 3.0.0)
 LazyData: true
+Config/testthat/edition: 3
