oversetting og dokumentasjon

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export("%>%")
 export(.data)
-export(add_freq_var_to_dataframe)
+export(add_gjen_var_to_dataframe)
 export(app_server)
 export(app_ui)
 export(boxplot_sam)
@@ -19,11 +19,11 @@ export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
 export(kval_plot)
+export(lagTabell)
+export(lag_ggplot_fordeling)
+export(lag_gjen_tabell)
 export(lag_sam_tabell)
 export(les_og_flate_ut)
-export(makePlot_gg)
-export(makeTable)
-export(make_freq_table)
 export(mapping_old_name_new_name)
 export(mergeRegData)
 export(module_datadump_UI)
