--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export("%>%")
 export(.data)
-export(add_gjen_var_to_dataframe)
 export(app_server)
 export(app_ui)
 export(boxplot_sam)
@@ -15,6 +14,7 @@ export(finn_sam_konfidensint)
 export(finn_sam_variabler)
 export(finn_variabler)
 export(ggdata_sam_plot)
+export(gjen_var_til_data)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
@@ -24,7 +24,7 @@ export(lag_ggplot_fordeling)
 export(lag_gjen_tabell)
 export(lag_sam_tabell)
 export(les_og_flate_ut)
-export(mapping_old_name_new_name)
+export(mapping_navn)
 export(mergeRegData)
 export(module_datadump_UI)
 export(module_datadump_server)
