Div rydding i eksempler, samt lagt til dokumentasjon på gjennomsnitt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,7 @@ export(prepros_SPC)
 export(run_app)
 export(spc_function)
 export(spc_text)
-export(table_freq_time)
+export(tabell_gjen_tid)
 export(tbl_reg)
 export(tbl_skjema_reg)
 export(utvalg_basic)
