--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(prepVar)
 export(prep_var_na)
 export(prepros_SPC)
 export(run_app)
+export(sjekk_antall)
 export(spc_function)
 export(spc_text)
 export(tabell_gjen_tid)
