--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export("%>%")
 export(.data)
-export(add_freq_var_to_dataframe)
 export(app_server)
 export(app_ui)
 export(boxplot_sam)
@@ -15,16 +14,17 @@ export(finn_sam_konfidensint)
 export(finn_sam_variabler)
 export(finn_variabler)
 export(ggdata_sam_plot)
+export(gjen_var_til_data)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
 export(kval_plot)
+export(lagTabell)
+export(lag_ggplot_fordeling)
+export(lag_gjen_tabell)
 export(lag_sam_tabell)
 export(les_og_flate_ut)
-export(makePlot_gg)
-export(makeTable)
-export(make_freq_table)
-export(mapping_old_name_new_name)
+export(mapping_navn)
 export(mergeRegData)
 export(module_datadump_UI)
 export(module_datadump_server)
@@ -48,9 +48,10 @@ export(prepVar)
 export(prep_var_na)
 export(prepros_SPC)
 export(run_app)
+export(sjekk_antall)
 export(spc_function)
 export(spc_text)
-export(table_freq_time)
+export(tabell_gjen_tid)
 export(tbl_reg)
 export(tbl_skjema_reg)
 export(utvalg_basic)
