start rydding. Backup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(finn_sam_variabler)
 export(finn_variabler)
 export(ggdata_sam_plot)
 export(gjen_var_til_data)
+export(kjor_appDeform)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
@@ -47,13 +48,14 @@ export(pre_pros)
 export(prepVar)
 export(prep_var_na)
 export(prepros_SPC)
-export(run_app)
+export(server_deform)
 export(sjekk_antall)
 export(spc_function)
 export(spc_text)
 export(tabell_gjen_tid)
 export(tbl_reg)
 export(tbl_skjema_reg)
+export(ui_deform)
 export(utvalg_basic)
 export(vask_sam_tabell)
 export(y_limits_gjen)
