Friendly names og rydd (#74)
Lagt til datadump med selvvalgte navn

---------

Co-authored-by: Lena Ringstad Olsen <lena.ringstad.olsen@helse-nord.no>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,19 @@
 
 export("%>%")
 export(.data)
-export(app_server)
-export(app_ui)
+export(alleRegData)
 export(boxplot_sam)
-export(clean_datadump)
 export(count_kvalind)
-export(deformitetHentTabell)
+export(defHentData)
 export(density_sam)
 export(explanation_kvalind)
+export(filtrer_datadump)
 export(finn_sam_konfidensint)
 export(finn_sam_variabler)
 export(finn_variabler)
 export(ggdata_sam_plot)
 export(gjen_var_til_data)
+export(kjor_appDeform)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
@@ -23,9 +23,7 @@ export(lagTabell)
 export(lag_ggplot_fordeling)
 export(lag_gjen_tabell)
 export(lag_sam_tabell)
-export(les_og_flate_ut)
 export(mapping_navn)
-export(mergeRegData)
 export(module_datadump_UI)
 export(module_datadump_server)
 export(module_fordeling_UI)
@@ -47,13 +45,14 @@ export(pre_pros)
 export(prepVar)
 export(prep_var_na)
 export(prepros_SPC)
-export(run_app)
+export(server_deform)
 export(sjekk_antall)
 export(spc_function)
 export(spc_text)
 export(tabell_gjen_tid)
 export(tbl_reg)
 export(tbl_skjema_reg)
+export(ui_deform)
 export(utvalg_basic)
 export(vask_sam_tabell)
 export(y_limits_gjen)
