module_sammenligning.R lintet ferdig

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,8 @@ export(module_kvalitetsindikator_UI)
 export(module_kvalitetsindikator_server)
 export(module_registreringer_UI)
 export(module_registreringer_server)
-export(module_sammenligning_UI)
 export(module_sammenligning_server)
+export(module_sammenligning_ui)
 export(ny_komplikasjon3mnd_usmerte)
 export(nye_navn)
 export(over_tid_plot)
