--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,16 +23,16 @@ export(lag_ggplot_fordeling)
 export(lag_gjen_tabell)
 export(lag_sam_tabell)
 export(mapping_navn)
-export(module_datadump_UI)
 export(module_datadump_server)
-export(module_fordeling_UI)
+export(module_datadump_ui)
 export(module_fordeling_server)
-export(module_gjennomsnitt_UI)
+export(module_fordeling_ui)
 export(module_gjennomsnitt_server)
-export(module_kvalitetsindikator_UI)
+export(module_gjennomsnitt_ui)
 export(module_kvalitetsindikator_server)
-export(module_registreringer_UI)
+export(module_kvalitetsindikator_ui)
 export(module_registreringer_server)
+export(module_registreringer_ui)
 export(module_sammenligning_server)
 export(module_sammenligning_ui)
 export(ny_komplikasjon3mnd_usmerte)
