Fra module_kvalitetsindikator_* til module_kvalind_*
For lange funksjonsnavn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,8 @@ export(module_fordeling_server)
 export(module_fordeling_ui)
 export(module_gjennomsnitt_server)
 export(module_gjennomsnitt_ui)
-export(module_kvalitetsindikator_server)
-export(module_kvalitetsindikator_ui)
+export(module_kvalind_server)
+export(module_kvalind_ui)
 export(module_registreringer_server)
 export(module_registreringer_ui)
 export(module_sammenligning_server)
