Endret navn på kjørefunksjon fra kjor_appDeform til kjor_app_deform

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(finn_sam_variabler)
 export(finn_variabler)
 export(ggdata_sam_plot)
 export(gjen_var_til_data)
-export(kjor_appDeform)
+export(kjor_app_deform)
 export(kompl_data)
 export(kompl_plot)
 export(kompl_tbl)
