Fjernet op_type fra fordelingsfigur Nye funksjoner basert på Nakke. Ikke tilpasset.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(.data)
 export(alleRegData)
 export(boxplot_sam)
 export(count_kvalind)
-export(defHentData)
+export(hentDataTabell)
 export(density_sam)
 export(explanation_kvalind)
 export(filtrer_datadump)
