Figur med andel per enhet (#91)
Co-authored-by: Lena Ringstad Olsen <lena.ringstad.olsen@helse-nord.no>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,16 @@ export(.data)
 export(alleRegData)
 export(boxplot_sam)
 export(count_kvalind)
-export(defHentData)
 export(density_sam)
 export(explanation_kvalind)
+export(figAndelerGrVar)
 export(filtrer_datadump)
 export(finn_sam_konfidensint)
 export(finn_sam_variabler)
 export(finn_variabler)
 export(ggdata_sam_plot)
 export(gjen_var_til_data)
+export(hentDataTabell)
 export(kjorDeformApp)
 export(kompl_data)
 export(kompl_plot)
@@ -22,6 +23,7 @@ export(lagTabell)
 export(lag_ggplot_fordeling)
 export(lag_gjen_tabell)
 export(lag_sam_tabell)
+export(mappingEgneNavnDum)
 export(mapping_navn)
 export(module_datadump_server)
 export(module_datadump_ui)
@@ -41,13 +43,16 @@ export(over_tid_plot)
 export(pre_pros)
 export(prepVar)
 export(prep_var_na)
+export(preprosData)
 export(server_deform)
 export(sjekk_antall)
 export(tabell_gjen_tid)
 export(tbl_reg)
 export(tbl_skjema_reg)
 export(ui_deform)
+export(utvalgEnh)
 export(utvalg_basic)
+export(varTilrettelegg)
 export(vask_sam_tabell)
 export(y_limits_gjen)
 importFrom(rlang,.data)
