--- a/.github/workflows/harbor.yml
+++ b/.github/workflows/harbor.yml
@@ -3,11 +3,9 @@ on:
   release:
     types: [published]
   push:
-    branches:
-        - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-        - main
+    branches: [ "main" ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -18,16 +16,18 @@ jobs:
     name: Push Docker image to Harbor
     runs-on: ubuntu-latest
     env:
-        IMAGE_NAME: ${{ github.repository }}
+      IMAGE_NAME: ${{ github.repository }}
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.3.0
         with:
           dockerfile: "Dockerfile"
       - name: R setup
         uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
       - name: Build package (tarball)
         run: R CMD build .
       - name: Prepare tags
@@ -40,6 +40,7 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
+            type=schedule,pattern=weekly
             type=semver,pattern={{version}}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -56,3 +57,4 @@ jobs:
           push: ${{ github.event_name == 'release' }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: GH_PAT=${{ secrets.GITHUB_TOKEN }}
